refactor: 替换System.out为slf4j日志框架
将项目中所有使用System.out打印日志的地方替换为slf4j日志框架，提升日志管理的灵活性和可配置性。统一使用logger.info、logger.error等方法记录日志信息，并支持参数化日志输出。

修改涉及测试类、示例代码及核心组件，确保日志输出格式统一且易于维护。同时优化部分日志信息的可读性，使用占位符替代字符串拼接。